Fixed bag of display setting button on Safari.

--- a/style.css
+++ b/style.css
@@ -493,6 +493,10 @@ input[type="number"]::-webkit-inner-spin-button:active {
    cursor: pointer;
 }
 
+input[type="submit"] {
+   -webkit-appearance: none;
+   }
+
  
 @media screen and (max-width: 769px) { 
    nav {
